# ServiceConfiguration

./: BuildTeloc.cpp  BuildTeloc.h  CMakeLists.txt  Compare.cpp  Compare.h  Config.ini  Configuration.cpp  Configuration.h  Configuration_impl.cpp  Configuration_impl.h  Debug.cpp  Debug.h  Doxyfile  Makefile.win  README.md  ServiceTool.cpp  ServiceTool.dev  ServiceTool.layout  Teloc3000_Impl.cpp  Teloc3000_Impl.h  Teloc4000_Impl.cpp  Teloc4000_Impl.h  Types.h  Util.cpp  Util.h  config.h.in  main.cpp
